<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/calcGelActivityBtn"
        android:layout_width="155dp"
        android:layout_height="82dp"
        android:layout_marginStart="24dp"
        android:text="@string/ypgel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

    <Button
        android:id="@+id/calcEpalActivityBtn"
        android:layout_width="155dp"
        android:layout_height="82dp"
        android:layout_marginStart="32dp"
        android:text="@string/ypologismosepal"
        app:layout_constraintBottom_toBottomOf="@+id/calcGelActivityBtn"
        app:layout_constraintStart_toEndOf="@+id/calcGelActivityBtn"
        app:layout_constraintTop_toTopOf="@+id/calcGelActivityBtn"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/themataSearchActivityBtn"
        android:layout_width="155dp"
        android:layout_height="82dp"
        android:text="@string/thema_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/calcGelActivityBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/calcGelActivityBtn"
        app:layout_constraintTop_toBottomOf="@+id/calcGelActivityBtn"
        app:layout_constraintVertical_bias="0.18" />

    <Button
        android:id="@+id/baseisViewAcivityBtn"
        android:layout_width="155dp"
        android:layout_height="82dp"
        android:text="@string/baseis"
        app:layout_constraintBottom_toBottomOf="@+id/themataSearchActivityBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/themataSearchActivityBtn"
        app:layout_constraintTop_toTopOf="@+id/themataSearchActivityBtn" />

    <Button
        android:id="@+id/uploadActivityBtn"
        android:layout_width="155dp"
        android:layout_height="82dp"
        android:text="Upload Gel Activity"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/themataSearchActivityBtn"
        app:layout_constraintStart_toStartOf="@+id/themataSearchActivityBtn"
        app:layout_constraintTop_toBottomOf="@+id/calcGelActivityBtn"
        app:layout_constraintVertical_bias="0.50"
        tools:ignore="HardcodedText"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>