<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/themataYearTextView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/xronologia"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272" />

    <Spinner
        android:id="@+id/themataYearSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="@+id/themataYearTextView"
        app:layout_constraintStart_toStartOf="@+id/themataYearTextView"
        app:layout_constraintTop_toBottomOf="@+id/themataYearTextView" />

    <TextView
        android:id="@+id/themataSchoolTypeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/typos"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/themataYearSpinner"
        app:layout_constraintStart_toStartOf="@+id/themataYearSpinner"
        app:layout_constraintTop_toBottomOf="@+id/themataYearSpinner" />

    <Spinner
        android:id="@+id/themataSchoolTypeSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="@+id/themataSchoolTypeTextView"
        app:layout_constraintStart_toStartOf="@+id/themataSchoolTypeTextView"
        app:layout_constraintTop_toBottomOf="@+id/themataSchoolTypeTextView" />

    <Button
        android:id="@+id/themataSearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themataSchoolTypeSpinner"
        app:layout_constraintVertical_bias="0.26999998" />
</androidx.constraintlayout.widget.ConstraintLayout>