<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/start_up_gel_button"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="172dp"
        android:text="@string/start_gel_upload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_epal_upload_button"
        android:layout_width="158dp"
        android:layout_height="0dp"
        android:text="@string/start_epal_upoload"
        app:layout_constraintBottom_toBottomOf="@+id/start_up_gel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start_up_gel_button"
        app:layout_constraintTop_toTopOf="@+id/start_up_gel_button" />

    <Button
        android:id="@+id/start_idikotita_upoload_button"
        android:layout_width="158dp"
        android:layout_height="0dp"
        android:text="UPLOAD idikotita"
        app:layout_constraintBottom_toBottomOf="@+id/uploadPedia"
        app:layout_constraintEnd_toEndOf="@+id/start_epal_upload_button"
        app:layout_constraintStart_toStartOf="@+id/start_epal_upload_button"
        app:layout_constraintTop_toTopOf="@+id/uploadPedia"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/themataUpload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/start_themata_upload"
        app:layout_constraintEnd_toEndOf="@+id/uploadPedia"
        app:layout_constraintStart_toStartOf="@+id/uploadPedia"
        app:layout_constraintTop_toBottomOf="@+id/uploadPedia" />

    <Button
        android:id="@+id/storageTemplateButton"
        android:layout_width="158dp"
        android:layout_height="0dp"
        android:text="cREATE sTORAGE TEMPL"
        app:layout_constraintBottom_toBottomOf="@+id/themataUpload"
        app:layout_constraintEnd_toEndOf="@+id/start_idikotita_upoload_button"
        app:layout_constraintStart_toStartOf="@+id/start_idikotita_upoload_button"
        app:layout_constraintTop_toTopOf="@+id/themataUpload"
        tools:ignore="HardcodedText" />

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="@+id/startAlogenisUploadButton"
        app:layout_constraintEnd_toEndOf="@+id/storageTemplateButton"
        app:layout_constraintStart_toStartOf="@+id/storageTemplateButton"
        app:layout_constraintTop_toTopOf="@+id/startAlogenisUploadButton"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/startAlogenisUploadButton"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="alogenis upload"
        app:layout_constraintEnd_toEndOf="@+id/themataUpload"
        app:layout_constraintStart_toStartOf="@+id/themataUpload"
        app:layout_constraintTop_toBottomOf="@+id/themataUpload"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/uploadPedia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Upload Pedia"
        app:layout_constraintEnd_toEndOf="@+id/start_up_gel_button"
        app:layout_constraintStart_toStartOf="@+id/start_up_gel_button"
        app:layout_constraintTop_toBottomOf="@+id/start_up_gel_button"
        tools:ignore="HardcodedText" />
</androidx.constraintlayout.widget.ConstraintLayout>