<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/baseisYearTextView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/xronologia"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <Spinner
        android:id="@+id/baseisYearSpinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/baseisYearTextView"
        app:layout_constraintStart_toStartOf="@+id/baseisYearTextView"
        app:layout_constraintTop_toBottomOf="@+id/baseisYearTextView" />

    <TextView
        android:id="@+id/baseisSchoolTypeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/typos"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/baseisYearSpinner"
        app:layout_constraintStart_toStartOf="@+id/baseisYearSpinner"
        app:layout_constraintTop_toBottomOf="@+id/baseisYearSpinner" />

    <Spinner
        android:id="@+id/baseisSchoolTypeSpinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/baseisSchoolTypeTextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/baseisSchoolTypeTextView"
        app:layout_constraintTop_toBottomOf="@+id/baseisSchoolTypeTextView" />

    <TextView
        android:id="@+id/baseisIdikotitaPedioTextView"
        style="@android:style/Widget.DeviceDefault.Light.TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/baseisSchoolTypeSpinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/baseisSchoolTypeSpinner"
        app:layout_constraintTop_toBottomOf="@+id/baseisSchoolTypeSpinner" />

    <Spinner
        android:id="@+id/baseisIdikotitaPedioSpinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:visibility="visible"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="@+id/baseisIdikotitaPedioTextView"
        app:layout_constraintStart_toStartOf="@+id/baseisIdikotitaPedioTextView"
        app:layout_constraintTop_toBottomOf="@+id/baseisIdikotitaPedioTextView" />

    <Button
        android:id="@+id/baseisSearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baseisIdikotitaPedioSpinner"
        app:layout_constraintVertical_bias="0.26999998" />
</androidx.constraintlayout.widget.ConstraintLayout>